<resources>
    <string name="app_name">AgendaFit-Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="Entrar">Entrar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="visualizar">visualizar treinos</string>
    <string name="adicionar">adicionar treinos</string>
    <string name="perfil">perfil</string>
    <string name="CadastrarTreino">Cadastrar Treino</string>
    <string name="VisualizarTreino">Visualizar Treinos</string>
    <string name="VisualizarExercicios">Visualizar Exercícios</string>
    <string name="home">home</string>
    <string name="CadastrarExercicio">Cadastrar Exercício</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_cadastro_treino">CadastroTreino</string>
    <string name="title_activity_visualizacao_treino">VisualizacaoTreino</string>

    <string-array name="tipo_treino">
        <item>Nenhum</item>
        <item>Peito</item>
        <item>Ombro</item>
        <item>Braço</item>
        <item>Costas</item>
        <item>Perna</item>
    </string-array>
    <string name="title_activity_cadastro_exercicios">CadastroExercicios</string>
    <string name="title_activity_visualizacao_exercicio">VisualizacaoExercicio</string>
    <string name="title_activity_visualizacao_detalhada_exercicio">VisualizacaoDetalhadaExercicio
    </string>
</resources>
