<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity=""
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MenuActivity"
    tools:showIn="@layout/activity_menu">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CadastrarTreino"
        android:background="@drawable/botoes"
        android:id="@+id/bMenuCadastrarTreino"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/branco"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/VisualizarTreino"
        android:background="@drawable/botoes"
        android:id="@+id/bMenuVisualizarTreino"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/branco"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/VisualizarExercicios"
        android:background="@drawable/botoes"
        android:id="@+id/bMenuVisualizarExercicios"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/branco"
        android:textStyle="bold"/>

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/CadastrarExercicio"
    android:background="@drawable/botoes"
    android:id="@+id/bMenuCadastrarExercicios"
    android:padding="15dp"
    android:layout_margin="20dp"
    android:layout_marginBottom="50dp"
    android:textColor="@color/branco"
    android:textStyle="bold"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnMenu"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/branco"
        app:labelVisibilityMode="selected"
        app:menu="@menu/bottom_nav" />

</LinearLayout>